# wsgiserve

./: .editorconfig  .travis.yml  Changes.rst  README.rst  entry_points.cfg  pytest.ini  setup.cfg  setup.py
example/: __init__.py  example.ini
tests/: test_command.py
wsgiserve/: __init__.py
