[bdist_wheel]
universal = 1

[metadata]
name = wsgiserve
url = https://github.com/aodag/wsgiserve
author = Atsushi Odagiri
author_email = aodagx@gmail.com
license = MIT
description = a command to run wsgi application defined paste deploy configuration.
long_description = file:README.rst

[options]
setup_requires = setuptools-scm
install_requires =
    plaster
    plaster_pastedeploy
    hupper
packages =
    wsgiserve

entry_points = file:entry_points.cfg

[options.extras_require]
testing =
  pytest
  pytest-cov
  flake8
  waitress

